# Q-A_Choice

./: .env.example  .gitignore  README.md  README.zh-CN.md
backend/: README.md  pyproject.toml
backend/qa_lab/: __init__.py  llm.py
backend/qa_lab/api/: __init__.py  server.py
backend/qa_lab/data/: __init__.py  graph_builder.py  ingest.py  loader.py  retriever.py
backend/qa_lab/graphs/: __init__.py  agentic_graph.py  agentic_tools.py  graphrag_graph.py  rag_graph.py
backend/scripts/: auto_resume_when_ready.sh  build_graph.py  fetch_docs.py  ingest.py  run_overnight_build.sh
docs/screenshots/: README.md
evaluation/: compute_metrics.py  decision_matrix.md  judge.py  questions.json  run_one_paradigm.py
evaluation/results/: scored_agentic_cross_doc.json  scored_agentic_multi_hop.json  scored_agentic_single_hop.json  scored_graphrag_cross_doc.json  scored_graphrag_multi_hop.json  scored_graphrag_single_hop.json  scored_rag_cross_doc.json  scored_rag_multi_hop.json  scored_rag_single_hop.json
frontend/: README.md
frontend/app/: layout.tsx  page.tsx
frontend/app/_components/: CompareGrid.tsx  QueryPanel.tsx  nav-bar.tsx
frontend/app/agentic/: page.tsx
frontend/app/compare/: page.tsx
frontend/app/graphrag/: page.tsx
frontend/app/matrix/: data.ts  page.tsx
frontend/app/rag/: page.tsx
