[project]
name = "qa-lab"
version = "0.1.0"
description = "Backend for the Q&A paradigm comparison lab (RAG / Agentic / GraphRAG)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "python-dotenv>=1.2.2",
    "langchain-google-genai>=4.2.3",
    "langchain-community>=0.4.2",
    "rank-bm25>=0.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qa_lab"]

[tool.ruff]
line-length = 100
target-version = "py311"
